[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/modSubMsg/minModInfoMsg.gd" type="Script" id=2]

[node name="Control" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 106.0
theme = ExtResource( 1 )
window_title = "信息"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 376.0
margin_top = 40.0
margin_right = 1397.0
margin_bottom = 555.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 56.0
margin_top = 54.0
margin_right = 367.0
margin_bottom = 307.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 54.0
margin_top = 374.0
margin_right = 267.0
margin_bottom = 548.0
text = "dddddd5555555555555555555555555555555555555555555555555"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 53.9413
margin_top = 535.22
margin_right = 228.941
margin_bottom = 583.596
text = "下载"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 53.9413
margin_top = 607.22
margin_right = 228.941
margin_bottom = 659.595
text = "删除"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_onDel_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
